--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="ينسون.jpg" alt="ينسون" />
+          <img src="https://i.postimg.cc/XqLRvxJN/image.jpg" alt="ينسون" />
           <div class="price-tag">10 E£</div>
         </div>
         <div class="item-info">
