--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Molook Café</title>
-    <link rel="icon" type="image/png" href="images/favicon.jpg">
+    <link rel="icon" type="image/png" href="favicon.jpg">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -155,7 +155,7 @@
       
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="نعناع.jpg" alt="نعناع" />
+             <img src="https://i.postimg.cc/vT5m2J3q/image.jpg" alt="نعناع" />
           <div class="price-tag">10 E£</div>
         </div>
         <div class="item-info">
@@ -209,8 +209,8 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="هوت شوكلت.jpg" alt="هوت شوكليت" />
-          <div class="price-tag">30 E£</div>
+      <img src="https://i.postimg.cc/SRGhMkZh/image.jpg" alt="هوت شوكليت" />
+            <div class="price-tag">30 E£</div>
         </div>
         <div class="item-info">
           <h3>هوت شوكليت</h3>
@@ -218,7 +218,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="هوت سيدر.jpg" alt="هوت سيدر" />
+          <img src="https://i.postimg.cc/J7j48W5K/image.jpg" alt="هوت سيدر" />
           <div class="price-tag">30 E£</div>
         </div>
         <div class="item-info">
@@ -344,7 +344,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="كابتشينو نكهات.jpg" alt="كابتشينو نكهات" />
+              <img src="https://i.postimg.cc/nrj5GZV5/image.jpg" alt="كابتشينو نكهات" />
           <div class="price-tag">45 E£</div>
         </div>
         <div class="item-info">
@@ -364,7 +364,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="موكا.jpg" alt="موكا" />
+          <img src="https://i.postimg.cc/xjmVmykd/image.jpg" alt="موكا" />
           <div class="price-tag">40 E£</div>
         </div>
         <div class="item-info">
@@ -374,7 +374,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="نسكافيه.jpg" alt="نساكفيه 3*1" />
+        <img src="https://i.postimg.cc/HxRJh4Hx/image.jpg" alt="نساكفيه 3*1" />
           <div class="price-tag">20 E£</div>
         </div>
         <div class="item-info">
@@ -384,7 +384,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="نسكافيه حليب.jpg" alt="نسكافيه حليب" />
+    <img src="https://i.postimg.cc/6pfvpvVj/image.jpg" alt="نسكافيه حليب" />
           <div class="price-tag">35 E£</div>
         </div>
         <div class="item-info">
@@ -394,7 +394,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="نسكافيه بلاك.jpg" alt="نسكافيه بلاك" />
+         <img src="https://i.postimg.cc/QMqHjZ3R/image.jpg" alt="نسكافيه بلاك" />
           <div class="price-tag">20 E£</div>
         </div>
         <div class="item-info">
@@ -555,7 +555,7 @@
       
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="موهيتو.jpg" alt="موهيتو" />
+         <img src="https://i.postimg.cc/fyfHKLn8/image.jpg" alt="موهيتو" />
           <div class="price-tag">50 E£</div>
         </div>
         <div class="item-info">
@@ -567,7 +567,7 @@
 
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="موهيتو ريد بول.jpg" alt="موهيتو ريدبول" />
+         <img src="https://i.postimg.cc/bwCBWsGM/image.jpg" alt="موهيتو ريدبول" />
           <div class="price-tag">55 E£</div>
         </div>
         <div class="item-info">
@@ -577,7 +577,7 @@
 
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="موهيتو جرين مينت.jpg" alt="موهيتو جرين مينت" />
+        <img src="https://i.postimg.cc/CK5WxjTS/image.jpg" alt="موهيتو جرين مينت" />
           <div class="price-tag">40 E£</div>
         </div>
         <div class="item-info">
@@ -668,7 +668,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="ميكس بيري.jpg" alt="سموزي مكي بيري" />
+        <img src="https://i.postimg.cc/MpQB2LXS/image.jpg" alt="سموزي مكي بيري" />
           <div class="price-tag">35 E£</div>
         </div>
         <div class="item-info">
@@ -731,7 +731,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="ميرندا.jpg" alt="ميرندا" />
+    <img src="https://i.postimg.cc/283vTyD3/image.jpg" alt="ميرندا" />
           <div class="price-tag">25 E£</div>
         </div>
         <div class="item-info">
@@ -803,7 +803,7 @@
       </div>
       <div class="menu-item">
         <div style="position: relative;">
-          <img src="مياه صغيره.jpg" alt="مياه صغيره" />
+             <img src="https://i.postimg.cc/vBR3w9GP/image.jpg" alt="مياه صغيره" />
           <div class="price-tag">10 E£</div>
         </div>
         <div class="item-info">
